# ai-finance-agent-oss

./: .cf-purge.last.json  .coveragerc  .dockerignore  .env.dev  .env.example  .env.prod.example  .env.prod.local  .env.web.prod  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tmp.compose.effective.yml  AGENTS.md  ANALYTICS_TRENDS_DETERMINISTIC.md  ANOMALIES_DEMO_GUIDE.md  AWS_SUPPORT_APPEAL.md  BACKEND_TESTING_COMPLETE.md  BUILD_METADATA.md  CHANGELOG.md  CHAT_CLEAR_FIX_DEPLOYED.md  CLEANUP_MONITORING_COMPLETE.md  CLOUDFLARE_ACTION_REQUIRED.md  CLOUDFLARE_CACHE_FIX.md  COMMIT_SECURITY_REMEDIATION.md  CONSOLE_ERRORS_FIX.md  CPU_DEMO_GUIDE.md  CSP-VALIDATION-RUNBOOK.md  ChatDock.current-launcher.bak.tsx  Context.md  DATA_QUALITY_COMPLETE.md  DEMO_DATA_CANONICALIZATION.md  DEMO_DATA_UPGRADE.md  DEMO_DATA_VISUAL_IMPACT.md  DEMO_FINANCE_TOOL_COMPLETE.md  DEMO_MODE_BACKEND_COMPLETE.md  DEMO_READY.md  DEMO_SEED_FIX.md  DEPLOY.md  DEPLOYMENT_2025-11-26_anomalies-fix.md  (+162 more)
apps/backend/: .dockerignore  .env.e2e  .env.e2e.example  .env.example  CANARY_QUICK_REF.md  Dockerfile  GRAFANA_SETUP.md  ML_DEPLOYMENT_COMPLETE.md  README.md  SNAPSHOT.md  Use-Postgres.ps1  add_unique_index.py  backfill_user_id.py  check_hints.py  check_not_null.py  check_test_hints.py  check_users.py  conftest.py  debug_canonical.py  debug_tables.py  demo_improvements.py  drop_legacy_prod.py  drop_legacy_tables.py  extended_training_data.csv  ingest_rag.py  ingest_sample_docs.py  ingest_v2.py  insert_starbucks.py  list_txn_ids.py  ping_suggest.py  pyproject.toml  pytest.ini  smoke-test.ps1  (+25 more)
(+3144 files in other folders)
