[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI Finance Agent"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "starlette>=0.37.2",
    "python-multipart>=0.0.9",
]

[tool.ruff]
line-length = 100
