[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI Finance Agent"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "starlette>=0.37.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.2.1",
    "cryptography>=42.0.0",
    "google-cloud-kms>=2.21.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "prometheus-client>=0.20.0",
]

[tool.ruff]
line-length = 100
